tests/spec/parse/snapshots/call_with_function_type_in_type_args.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { Map.new<string, fn(int, int) -> int>(); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: DotAccess {
                            expression: Identifier {
                                value: "Map",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 13,
                                    byte_length: 3,
                                },
                                resolution: Unresolved,
                            },
                            member: "new",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 13,
                                byte_length: 7,
                            },
                            resolution: Unresolved,
                        },
                        args: [],
                        spread: None,
                        type_arguments: Unresolved(
                            [
                                Constructor {
                                    name: "string",
                                    params: [],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 21,
                                        byte_length: 6,
                                    },
                                },
                                Function {
                                    params: [
                                        Constructor {
                                            name: "int",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 32,
                                                byte_length: 3,
                                            },
                                        },
                                        Constructor {
                                            name: "int",
                                            params: [],
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 37,
                                                byte_length: 3,
                                            },
                                        },
                                    ],
                                    return_type: Constructor {
                                        name: "int",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 45,
                                            byte_length: 3,
                                        },
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 29,
                                        byte_length: 19,
                                    },
                                },
                            ],
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 38,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 43,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 53,
        },
    },
]
