tests/spec/parse/snapshots/call_with_spread_arg_trailing_comma.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { func(xs...,); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Call {
                    expression: Identifier {
                        value: "func",
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 4,
                        },
                        binding_id: None,
                        qualified: None,
                    },
                    args: [],
                    spread: Some(
                        Identifier {
                            value: "xs",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 18,
                                byte_length: 2,
                            },
                            binding_id: None,
                            qualified: None,
                        },
                    ),
                    type_arguments: None,
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 13,
                        byte_length: 12,
                    },
                    call_kind: None,
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 17,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 27,
        },
    },
]
