tests/spec/parse/snapshots/call_with_type_arg_nested.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { func<Map<string, int>>(); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Block {
            items: [
                Call {
                    expression: Identifier {
                        value: "func",
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 4,
                        },
                        binding_id: None,
                        qualified: None,
                    },
                    args: [],
                    spread: None,
                    type_arguments: Unresolved(
                        [
                            Constructor {
                                name: "Map",
                                params: [
                                    Constructor {
                                        name: "string",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 22,
                                            byte_length: 6,
                                        },
                                    },
                                    Constructor {
                                        name: "int",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 30,
                                            byte_length: 3,
                                        },
                                    },
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 18,
                                    byte_length: 16,
                                },
                            },
                        ],
                    ),
                    ty: Var {
                        id: uninferred,
                    },
                    span: Span {
                        file_id: 0,
                        byte_offset: 13,
                        byte_length: 24,
                    },
                    call_kind: None,
                },
            ],
            ty: Var {
                id: uninferred,
            },
            span: Span {
                file_id: 0,
                byte_offset: 11,
                byte_length: 29,
            },
        },
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 39,
        },
    },
]
