tests/spec/parse/snapshots/call_with_type_arg_simple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { func<int>(x); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: Identifier {
                            value: "func",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 13,
                                byte_length: 4,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Identifier {
                                value: "x",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                        ],
                        spread: None,
                        type_arguments: Unresolved(
                            [
                                Constructor {
                                    name: "int",
                                    params: [],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 18,
                                        byte_length: 3,
                                    },
                                },
                            ],
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 12,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 17,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 27,
        },
    },
]
